[gd_scene load_steps=6 format=2]

[ext_resource path="res://themes/CustomAssets/Orange.tres" type="StyleBox" id=1]
[ext_resource path="res://themes/CustomAssets/ClearOrange.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/CustomAssets/White.tres" type="StyleBox" id=3]
[ext_resource path="res://testing/Hoovered.tres" type="StyleBox" id=4]
[ext_resource path="res://testing/TUMDefButtons.gd" type="Script" id=5]

[node name="DiagramaControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 129.0
margin_top = 107.0
margin_right = -160.0
margin_bottom = -64.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 0.993
anchor_bottom = 0.885
margin_left = 5.99999
margin_top = -3.0
margin_right = 11.326
margin_bottom = -122.665
custom_constants/separation = 40
alignment = 1

[node name="Calendar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 735.0
margin_bottom = 35.0
custom_constants/separation = 0

[node name="Button" type="Button" parent="VBoxContainer/Calendar"]
margin_right = 735.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Tiempo Calendario"

[node name="Label" type="Label" parent="VBoxContainer/Calendar/Button"]
anchor_left = 0.433
anchor_right = 0.566
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -2.0
margin_right = -28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Required" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 735.0
margin_bottom = 110.0
custom_constants/separation = 10

[node name="Button2" type="Button" parent="VBoxContainer/Required"]
margin_right = 145.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Tiempo de Reserva"

[node name="Label" type="Label" parent="VBoxContainer/Required/Button2"]
margin_left = 20.0
margin_right = 122.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button" type="Button" parent="VBoxContainer/Required"]
margin_left = 155.0
margin_right = 735.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Tiempo Requerido"

[node name="Label" type="Label" parent="VBoxContainer/Required/Button"]
anchor_left = 0.433
anchor_right = 0.566
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -2.0
margin_right = -28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Available" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 735.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 1599, 100 )
custom_constants/separation = 36

[node name="Button2" type="Button" parent="VBoxContainer/Available"]
margin_right = 233.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Tiempo de Detención del Equipo"

[node name="Label" type="Label" parent="VBoxContainer/Available/Button2"]
anchor_left = 0.231
anchor_right = 0.779
anchor_bottom = 1.0
margin_left = 0.0889969
margin_right = -9.89902
margin_bottom = -7.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button" type="Button" parent="VBoxContainer/Available"]
margin_left = 269.0
margin_right = 735.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Tiempo Disponible"

[node name="Label" type="Label" parent="VBoxContainer/Available/Button"]
anchor_left = 0.433
anchor_right = 0.566
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -2.0
margin_right = -28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Cycle" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 225.0
margin_right = 735.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 1599, 100 )
custom_constants/separation = 8

[node name="Required" type="HBoxContainer" parent="VBoxContainer/Cycle"]
margin_right = 255.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
custom_constants/separation = 6

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Cycle/Required"]
margin_bottom = 35.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.34

[node name="Button2" type="Button" parent="VBoxContainer/Cycle"]
margin_left = 263.0
margin_right = 495.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Tiempo de Detención del Proceso "

[node name="Label" type="Label" parent="VBoxContainer/Cycle/Button2"]
margin_left = 20.0
margin_right = 122.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="Button" type="Button" parent="VBoxContainer/Cycle"]
margin_left = 503.0
margin_right = 735.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Tiempo de Ciclo"

[node name="Label" type="Label" parent="VBoxContainer/Cycle/Button"]
anchor_left = 0.433
anchor_right = 0.566
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -2.0
margin_right = -28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="UEDButton2" type="Button" parent="."]
anchor_left = 0.358
anchor_top = 0.678
anchor_right = 0.521
anchor_bottom = 0.873
margin_left = 0.271973
margin_top = 0.10791
margin_right = -2.31406
margin_bottom = -0.109009
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="Label" type="Label" parent="UEDButton2"]
anchor_left = 0.107
anchor_top = 0.231
anchor_right = 0.917
anchor_bottom = 0.863
margin_left = -7.94441
margin_top = -9.24413
margin_right = 4.10821
margin_bottom = 4.02303
custom_colors/font_color = Color( 0.905882, 0.721569, 0, 1 )
text = "Detención 
no Programada 
del Equipo"
align = 1
valign = 1

[node name="SEDButton2" type="Button" parent="."]
anchor_left = 0.527
anchor_top = 0.677
anchor_right = 0.672
anchor_bottom = 0.871
margin_left = 0.266998
margin_top = -0.117035
margin_right = -0.349091
margin_bottom = 0.0949707
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="Label" type="Label" parent="SEDButton2"]
anchor_left = 0.143
anchor_top = 0.162
anchor_right = 0.881
anchor_bottom = 0.855
margin_left = -5.76416
margin_top = -1.83291
margin_right = 2.03813
margin_bottom = 6.34454
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Detención
Programada 
del Equipo"
align = 1
valign = 1

[node name="UEDButton" type="Button" parent="."]
anchor_left = 0.004
anchor_top = 0.551
anchor_right = 0.157
anchor_bottom = 0.745
margin_left = 0.0599942
margin_top = 0.101898
margin_right = 0.406982
margin_bottom = 0.140961
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="Label" type="Label" parent="UEDButton"]
anchor_left = 0.107
anchor_top = 0.231
anchor_right = 0.917
anchor_bottom = 0.863
margin_left = -5.06982
margin_top = -9.71514
margin_right = 10.5606
margin_bottom = 3.66135
custom_colors/font_color = Color( 0.905882, 0.721569, 0, 1 )
text = "Detención 
no Programada 
del Equipo"
align = 1
valign = 1

[node name="SEDButton" type="Button" parent="."]
anchor_left = 0.165
anchor_top = 0.55
anchor_right = 0.301
anchor_bottom = 0.745
margin_left = 0.0919876
margin_top = 0.0499878
margin_right = 16.212
margin_bottom = -0.167114
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="Label" type="Label" parent="SEDButton"]
anchor_left = 0.143
anchor_top = 0.162
anchor_right = 0.881
anchor_bottom = 0.855
margin_left = -2.96643
margin_top = -6.51693
margin_right = -2.63345
margin_bottom = 1.66055
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Detención
Programada 
del Equipo"
align = 1
valign = 1

[node name="NVPTButton" type="Button" parent="."]
anchor_left = 0.686
anchor_top = 0.671
anchor_right = 0.836
anchor_bottom = 0.865
margin_left = 0.0559082
margin_top = -0.0241089
margin_right = -0.24408
margin_bottom = 0.187866
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )

[node name="Label" type="Label" parent="NVPTButton"]
anchor_left = 0.016
anchor_top = 0.074
anchor_right = 1.0
anchor_bottom = 0.865
margin_left = -0.0251031
margin_top = -0.0093317
margin_right = -2.8858
margin_bottom = -0.00875854
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Tiempo 
de Operación
 No Productiva"
align = 1
valign = 1

[node name="PTButtom" type="Button" parent="."]
anchor_left = 0.847
anchor_top = 0.669
anchor_right = 0.995
anchor_bottom = 0.863
margin_left = -0.199036
margin_top = -0.166107
margin_right = 0.257813
margin_bottom = 0.0458679
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="Label" type="Label" parent="PTButtom"]
anchor_left = 0.017
anchor_top = 0.342
anchor_right = 0.926
anchor_bottom = 0.701
margin_left = -1.20302
margin_top = -9.37069
margin_right = 5.53499
margin_bottom = 3.6751
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tiempo
Productivo"
align = 1
valign = 1
